docs: update swagger examples for all endpoints
